name:                Advent2016
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Advent2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day2
  hs-source-dirs:      src
  main-is:             Day2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text


executable Day3
  hs-source-dirs:      src
  main-is:             Day3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec


executable Day4
  hs-source-dirs:      src
  main-is:             Day4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers