name:                Advent2016
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/Advent2016#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day1
  hs-source-dirs:      src
  main-is:             Day1.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , containers

executable day2
  hs-source-dirs:      src
  main-is:             Day2.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text


executable day3
  hs-source-dirs:      src
  main-is:             Day3.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec


executable day4
  hs-source-dirs:      src
  main-is:             Day4.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , text
                     , attoparsec
                     , containers


executable day5
  hs-source-dirs:      src
  main-is:             Day5.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , pureMD5
                     , attoparsec
                     , ansi-terminal
                     , random


executable day6
  hs-source-dirs:      src
  main-is:             Day6.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     -- , attoparsec
                     -- , ansi-terminal
                     -- , random
                     , containers
                     , text